// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Calendar methods should render correctly 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-prev-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowLeft) />
  </styled.button>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-next-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowRight) />
  </styled.button>
  <styled.div
    className={undefined}
  >
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
  </styled.div>
</styled.div>
`;

exports[`#Calendar methods should render correctly with allowedDates 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-prev-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowLeft) />
  </styled.button>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-next-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowRight) />
  </styled.button>
  <styled.div
    className={undefined}
  >
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
  </styled.div>
</styled.div>
`;

exports[`#Calendar methods should render correctly with future enabled 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-prev-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowLeft) />
  </styled.button>
  <styled.button
    className={undefined}
    colors={
      Object {
        "background": "white",
        "border": "#e4e7e7",
        "disabled": "gray",
        "hover": "#e4e7e7",
        "selected": "rgb(244, 114, 49)",
        "selectedHover": "rgb(255, 141, 74)",
      }
    }
    data-test="rdl-next-button"
    disabled={true}
    onClick={[Function]}
  >
    <Styled(ArrowRight) />
  </styled.button>
  <styled.div
    className={undefined}
  >
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
    />
  </styled.div>
</styled.div>
`;
